--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,30 +38,22 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-
     //查看App数据库使用(方法：1.放开注释 2.重新编译 3.使用'DebugDB'字段检索日志 4.访问检索到的连接，OK!)
     debugCompile 'com.amitshekhar.android:debug-db:1.0.0'
 
-    apt 'com.zhy:mpermission-compiler:1.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.zhy:mpermission-api:1.0.0'
-
     compile 'com.jusenr.android.library:androidtools:1.+'
-
     compile 'com.putao.mobile:ptlog:1.+'
     compile 'com.putao.mobile:gpush:1.+'
-
+    compile 'com.putao.mobile:ptutils:1.+'
     compile 'com.putao.appstore:com.putao.ptdatasdk:1.+'
-
     compile 'com.putao.appstore:downloader:1.+'
     compile 'com.putao.appstore:storebridge:0.+'
-
     compile 'com.putao.commonuilibrary:appstorecommonlibrary:1.+'
-
     compile 'com.putao.minidatasdk:minidatasdk:0.+'
-
     compile 'com.putao.ptx:core:0.+'
     compile 'com.putao.ptx:padsdk:1.+'
     compile 'com.putao.ptx:pai:0.+'
@@ -70,4 +62,5 @@ dependencies {
     compile 'com.putao.ptx:transport-server:0.+'
     compile 'com.putao.ptx:system-account:0.+'
 
+    apt 'com.zhy:mpermission-compiler:1.0.0'
 }
