--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 
     <application
+        android:name=".TotalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/pt_002"
         android:label="@string/app_name"
@@ -26,6 +27,8 @@
         <activity android:name=".TestActivity">
         </activity>
         <activity android:name=".Test2Activity">
+        </activity>
+        <activity android:name=".Test3Activity">
         </activity>
     </application>
 
